# worldenergydata

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: dev_tests.yml  library_tests.yml  pytest.yml
data/bsee/: ExplDevPlans.csv
data/bsee/superseded/code/: Paleowellsdata.py
data/bsee/superseded/superseded/: 0119-DATA-008-0000-01 (MK Draft).py.py  0119-DATA-008-0001-02 (MK Draft2).py.py  Apache Company Wells.py  (+24 more)
data/drilling_rigs/offshore/: DrillRigs Mud Pumps.xls  DrillRigs Rig Rating and Contract.xls  DrillRigs Riser and Tensioner data.xls
data/lngc/: seapeak_group_fleet_list-1.xlsx
data/modules/lngc/: lngc.md
data/modules/oil_price/: F000000__3a.xls  F000000__3m.xls
data/modules/posters/: 062614DrillRig-posterAds.xlsx
data/modules/sodir_zip_data/: afxAreaCurrent.csv  apaAreaGross.csv  baaAreaCurrent.csv  baaAreaSplitByBlock.csv
dev_tools/: dev_instructions.md  environment.yml  requirements.txt  ss_env_versions.txt  va_env_versions.txt
dev_tools/bash_tools/: common.sh  git_all_repos_daily_commit.sh  git_clean_stale_local_branches.sh  git_daily_commit.sh  git_select_year_month_branch.sh  removeEnv.sh  runTests.sh  setupEnv.sh  setupLocalInstall.sh
docs/: Bsee_data_workflow.puml  api_details_extraction.plantuml  bsee_data.md  bsee_data.puml  bsee_data_AI.md  bsee_data_api.puml  bsee_data_api_scrapy.puml  bsee_data_status.puml  petrophysics.md  software_team_kpis.md  using_setuppy.md
docs/_lib/bsee_data/: bsee_data_status.puml  map_data.puml
docs/_lib/data/: scrapy_workflow.puml  selenium_workflow.plantuml
docs/legacy_bsee/: 0119-008 Filelog.xlsx
docs/legacy_bsee/Ref/: BOEM-GOM-WILCOX-Sands-2018-database.xlsx  Deepwater ERD Well Examples.doc  DirectionalSurvey_Headings.xlsx  SLOOP_Description-BMT-20210813-14_cnw.docx
docs/modules/: bsee_data_for_AI.md  energy_data.puml  folder_structure.puml
docs/modules/bsee/: BSEE_analysis.yml  JStM-WELL-Production-Data-thru-2019.xlsx  analysis.md  analysis_data.md  apm_data_rev1.md  bsee_architecture.puml  data.md  data_for_analysis.md  data_rev1.md  documentation_for_analysis.md  drilling_data_rev1.md  high_level_architecture.puml  query_api_01_block_julia_2_api12.xlsx  revenue_stmalo_yearly_total_2014_2025.xlsx  well_api_number.md
docs/modules/materials/: resources.md
docs/raw_data/bsee/: data_exploration.md
docs/raw_data/drilling/: fleets.md
docs/raw_data/sodir/: sodir.md
docs/raw_data/wa/: intro.md
src/energydata/: __init__.py  __main__.py  engine.py
src/energydata/common/: data_models_components.py  web_scraping.py
src/energydata/custom/: API_data_bs4.py  beautifulSoup_API.py  bsee.py  bsee_data.py  bsee_data_api.py  bsee_data_api_scrapy.py  prepare_bsee_data.py  scrapy_API_data.py  scrapy_for_API.py  scrapy_for_block.py  scrapy_production_data.py
src/energydata/tests/: test_production.py  test_read_zip.py
src/worldenergydata/: __main__.py  engine.py
tests/: test_read_zip_csv_no_header.py
tests/legacy/: test_production.py
tests/legacy/results/: Buckskin_Rep.yml  CVX_Anchor.yml  Cascade_Rep.yml  Gibson_Rep.yml  Shenandoah.yml  TOT_North_Platte_Rep.yml  Tiber_Rep.yml  Tigris.yml  XOM_Julia_Rep.yml  ong_field_development_py.bat
tests/legacy_tests/: test_bsee_data.py  test_load_data_to_database.py
tests/modules/all_yml/: repo_yml_status.csv  test_all_yml.py  yml_summary_pytest.txt
tests/modules/analysis/: column_results.txt  find_columns.py  jack_apis.yml  jack_by_block.yml  prepare_bsee_data.yml  stmalo_apis.yml  stmalo_by_block.yml
tests/modules/bsee/: bsee_10_APIs.yml  find_column_results.txt  find_columns.py  jack_apis.yml  production_data.yml  quick_test_zip.py  stmalo_apis.yml  stmalo_by_block.yml  test_analysis.py  test_jack_by_block.py  test_jack_field.py  test_join_dfs.py  test_stmalo_by_block.py
tests/modules/data/: bsee_10_APIs.yml  bsee_well_data.yml  production_data.yml  test_read_from_URL.py  test_read_from_all_URL.py  test_read_from_zipurl.py
(+1603 files in other folders)
